# cookingchrono

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.dinum  Makefile  README.md  buildozer.spec  conda-spec-file.txt  environment.yml  gradle.properties  pyproject.toml
.github/workflows/: main.yml  release.yml
coockingchrono/: cookingchrono.kv  main.py
coockingchrono/screens/: count_down_screen.py  main_screen.py  options_screen.py  screen_manager.py
coockingchrono/widgets/: count_down_label.py  time_input.py
coockingchrono/widgets/navigation/: contentnavigationdrawer.py  drawerlist.py
cookingchrono/: __init__.py  cookingchrono.kv  main.py  service.py  sound_player.py
cookingchrono/db/: config.ini  db.json
cookingchrono/garden/screens/: screen_factory.py
cookingchrono/garden/widgets/: skaffold.py
cookingchrono/garden/widgets/navigation/: __init__.py  contentnavigationdrawer.py  itemdrawer.py
cookingchrono/screens/: __init__.py  count_down_screen.py  main_screen.py  options_screen.py  recipes_screen.py  screen_factory.py  screen_manager.py
cookingchrono/widgets/: __init__.py  skaffold.py  time_input.py
cookingchrono/widgets/navigation/: __init__.py  contentnavigationdrawer.py  drawerlist.py  itemdrawer.py
tests/: test_app.py
