[tool.poetry]
name = "cookingchrono"
version = "0.1.0"
description = ""
authors = ["Thomas Guyader <laboitatom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"
kivymd = "^0.104.1"
ffpyplayer = "^4.3.2"

[tool.poetry.dev-dependencies]
buildozer = "^1.2.0"
Cython = "0.29.19"
virtualenv = "^20.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
