[tool.poetry]
name = "cookingchrono"
version = "0.1.0"
description = ""
authors = ["Thomas Guyader <laboitatom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"
kivymd = "^0.104.1"
ffpyplayer = "^4.3.2"
tinydb = "^4.4.0"

[tool.poetry.dev-dependencies]
buildozer = "^1.2.0"
Cython = "0.29.19"
virtualenv = "^20.4.0"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
