[tool.poetry]
name = "cookingchrono"
version = "0.1.0"
description = ""
authors = ["Thomas Guyader <laboitatom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"
kivymd = "^0.104.1"
ffpyplayer = "^4.3.2"
tinydb = "^4.4.0"
pylint = "^2.7.2"

[tool.poetry.dev-dependencies]
buildozer = "^1.2.0"
Cython = "0.29.19"
virtualenv = "^20.4.0"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
mkinit = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88
